# optical-constant-plugin

./: .gitignore  pyproject.toml
src/optical_constant_plugin/apps/: myapp.py
src/optical_constant_plugin/normalizers/: mynormalizer.py
src/optical_constant_plugin/parsers/: myparsers.py
src/optical_constant_plugin/schema_packages/: mypackage.py  plugin.py
